SONARJAVA-4770 S2438 FN on arguments whose concrete type is Thread (#4704)